--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "devDependencies": {
     "del": "^2.2.0",
     "gulp": "^3.9.0",
+    "gulp-clean-css": "^3.9.2",
     "gulp-delete-file": "^1.0.2",
     "gulp-if": "^2.0.0",
     "gulp-ignore": "^2.0.1",
-    "gulp-minify-css": "^1.2.2",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.2.0",
     "gulp-regex-rename": "^0.1.0",
